DuPont DevSB/src/objects/Application__c.object
<CustomObject>
    <description>The main object that represents a custom unit of work that will drive an Estimate</description>
    <fields>
        <fullName>Adoption_Rate__c</fullName>
        <label>Adoption Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Application_Platform__c</fullName>
        <label>Application Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Visual Basic</fullName>
                </value>
                <value>
                    <fullName>HTML/Javascript</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Database_Platform__c</fullName>
        <label>Database Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SQL Server</fullName>
                </value>
                <value>
                    <fullName>MSAccess</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Applications Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Releases__c</fullName>
        <label>Frequency of Releases</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Adequacy__c</fullName>
        <label>Functional Adequacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Very Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Upgrade_Date__c</fullName>
        <label>Last Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Candidate_Score__c</fullName>
        <label>Max Candidate Score</label>
        <summarizedField>Validation_Score__c.Calculated_Pilot_Score2__c</summarizedField>
        <summaryForeignKey>Validation_Score__c.Application__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Complexity_Rating__c</fullName>
        <label>Max Complexity Rating</label>
        <summarizedField>Validation_Score__c.Calculated_Complexity_Score_Percent__c</summarizedField>
        <summaryForeignKey>Validation_Score__c.Application__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Picklist_Field__c</fullName>
        <label>Picklist Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Usage_Type__c</fullName>
        <label>Primary Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont Extranet</fullName>
                </value>
                <value>
                    <fullName>Account provisioing</fullName>
                </value>
                <value>
                    <fullName>Bank/payment</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Bug tracking</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Expense management</fullName>
                </value>
                <value>
                    <fullName>File share</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Help desk</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Intranet search</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Project portal</fullName>
                </value>
                <value>
                    <fullName>Quickbooks,</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Supply chain</fullName>
                </value>
                <value>
                    <fullName>Time and billing management</fullName>
                </value>
                <value>
                    <fullName>Solae Lotus Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Assign the relative business importance of the application
Mission Critical - Major Business Disruption if not in place
High - Somewhat disruptive
Medium - Mildly disruptive
Low - No disruption</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mission Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement_Coverage__c</fullName>
        <inlineHelpText>What percentage of business requirements does the current application meet?</inlineHelpText>
        <label>Requirement Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SLA_or_Required_Uptime__c</fullName>
        <label>SLA or Required Uptime</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Used Fully</fullName>
                </value>
                <value>
                    <fullName>Partially Used</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_IT_Support_Months_Per_Year__c</fullName>
        <label># of IT Support Months Per Year</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Instances__c</fullName>
        <label># of Instances</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2-5</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Application_Platform__c</columns>
        <columns>Database_Platform__c</columns>
        <columns>Priority__c</columns>
        <columns>Max_Candidate_Score__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Platform__c</field>
            <operation>equals</operation>
            <value>Notes</value>
        </filters>
        <label>Notes Application Backlog</label>
    </listViews>
    <listViews>
        <fullName>All_Applications</fullName>
        <columns>NAME</columns>
        <columns>Application_Platform__c</columns>
        <columns>Description__c</columns>
        <columns>Max_Candidate_Score__c</columns>
        <columns>Max_Complexity_Rating__c</columns>
        <columns>Primary_Usage_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Applications</label>
    </listViews>
    <listViews>
        <fullName>DuPont_Extranets</fullName>
        <columns>NAME</columns>
        <columns>Primary_Usage_Type__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Usage_Type__c</field>
            <operation>equals</operation>
            <value>DuPont Extranet</value>
        </filters>
        <label>DuPont Extranets</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Existing</fullName>
        <active>true</active>
        <description>Application that is currently in production</description>
        <label>Existing</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <description>Application that is not in production</description>
        <label>New</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>